# frappe-vms

./: MANIFEST.in  README.md  pyproject.toml
docs/: WHAT_CHANGED.md
visitor_management/: hooks.py  patches.txt
visitor_management/config/: visitor_management.json
visitor_management/doctype/gate_log/: gate_log.json  gate_log.py
visitor_management/doctype/visitor_entry/: visitor_entry.py
visitor_management/fixtures/: number_cards.json
visitor_management/public/js/: visitor_entry.js  visitor_entry_list.js
visitor_management/report/daily_visitor_summary/: daily_visitor_summary.json  daily_visitor_summary.py
visitor_management/report/overstayed_visitors/: overstayed_visitors.json  overstayed_visitors.py
visitor_management/visitor_management/: utils.py
visitor_management/visitor_management/doctype/visitor_blacklist/: visitor_blacklist.json  visitor_blacklist.py
visitor_management/visitor_management/doctype/visitor_entry/: visitor_entry.json  visitor_entry.py
visitor_management/visitor_management/doctype/visitor_settings/: visitor_settings.json  visitor_settings.py
visitor_management/visitor_management/print_format/visitor_pass/: visitor_pass.html  visitor_pass.json
visitor_management/visitor_management/report/daily_visitor_summary/: daily_visitor_summary.json
